# PolicySight

./: .env.example  .gitignore  Dockerfile  Dockerfile.backend  Dockerfile.frontend  OKF.md  README.md  docker-compose.yml  fly.frontend.toml  fly.toml  nginx.frontend.conf  run.py  sample-policy-slip-low-coverage.doc  sample-policy-slip-low-coverage.png.txt  sample-policy-slip-low-coverage.rtf  sample-policy-slip-low-coverage.txt  sample-policy-slip-ocr-noisy.doc  sample-policy-slip-ocr-noisy.html  sample-policy-slip-ocr-noisy.png.txt  sample-policy-slip.html  sample-policy-slip.rtf  sample-policy-slip.txt  vercel.json  wrangler.toml
AutoInsurance-docs/: FDE-test-cases.md  OKF.md.txt  (+12 more)
backend/: pyproject.toml
backend/src/: main.py
backend/src/ai/: client.py  ocr.py
backend/src/api/: audit_routes.py  auth_routes.py  chat_routes.py  claims_routes.py  feedback_routes.py  lapse_routes.py  policy_routes.py  rate_routes.py  state_routes.py  timeline_routes.py
backend/src/config/: settings.py
backend/src/core/: audit.py  auth.py  claims.py  claims_advocate.py  comparison.py  cost_estimator.py  decision.py  edge_cases.py  endorsement_analyzer.py  explainer.py  feedback.py  lapse.py  logging_middleware.py  ocr_confidence.py  policy_decoder.py  policy_period.py  rag_pipeline.py  safe_failure.py  scenario.py  scheduler.py  state_rules.py  timeline.py  trajectory.py  vehicle_match.py
backend/src/db/: base.py  models.py  schema.sql  seed.py  timescaledb-init.sql
backend/tests/: test_claims_advocate.py  test_lapse.py  test_policy_decoder.py  test_trajectory.py
(+36 files in other folders)
