[project]
name = "policysight"
version = "0.1.0"
description = "AI-Driven Auto Insurance Middleware"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "sqlalchemy>=2.0.23",
    "psycopg2-binary>=2.9.9",
    "openai>=1.3.0",
    "python-dotenv>=1.0.0",
    "stripe>=7.0.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",
    "celery>=5.3.0",
    "redis>=5.0.0",
    "pillow>=10.1.0",
    "pytesseract>=0.3.10",
    "PyMuPDF>=1.23.0",
    "PyPDF2>=3.0.0",
    "pdfminer.six>=20221105",
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]